# hl_code

./: .gitignore  CMakeLists.txt  README.md  dem程序开发方案.md  使用说明文档.md  项目介绍.md
arcgis/: dem_idw.tif.aux.xml  dem_idw.tif.xml  dem_idw_final.tfw  dem_idw_final.tif.aux.xml  dem_idw_final.tif.xml  dem_raw.sbx  dem_raw.shp.xml  dem_raw.tif.ovr  dem_raw_mask.dbf  dem_raw_mask.sbn  dem_raw_mask.sbx  dem_raw_mask.shp  dem_raw_mask.shp.xml  dem_raw_mask.shx  zy3.mxd
config/: example_config.json  official_dataset_manifest.json  reference_dem_map.json
config/output_tile_smoke/20260406_044353/dem/: dem_edge_mask.tif  dem_idw.tif  dem_mask.tif  dem_nearest.tif
config/output_tile_smoke/20260406_044353/log/: config_used.txt  run_log.txt  stats.txt
config/output_tile_smoke/20260406_044353/pointcloud/: filtered_points.ply  ground_points.ply  nonground_points.ply
config/output_tile_smoke/20260406_044353/tile/: tile_0.xyz  tile_10.xyz  tile_101.xyz  tile_103.xyz  tile_107.xyz  tile_109.xyz  tile_113.xyz  tile_115.xyz  tile_119.xyz  tile_12.xyz  tile_16.xyz  tile_18.xyz  tile_22.xyz  tile_24.xyz  tile_28.xyz  tile_3.xyz  tile_30.xyz  tile_34.xyz  tile_36.xyz  tile_4.xyz  tile_40.xyz  tile_42.xyz  tile_46.xyz  tile_48.xyz  tile_52.xyz  tile_54.xyz  tile_55.xyz  tile_58.xyz  tile_6.xyz  tile_60.xyz  tile_61.xyz  tile_64.xyz  tile_65.xyz  tile_67.xyz  tile_71.xyz  tile_73.xyz  tile_77.xyz  tile_79.xyz  tile_83.xyz  tile_85.xyz  (+4 more)
data_alias/: benchmark.ply  resource3.ply
docs/: 使用手册.md  架构说明.md
include/dem/: CRSManager.hpp  Config.hpp  DEMEngine.hpp  GroundFilterEngine.hpp  InputManager.hpp  Logger.hpp  MainController.hpp  OutputManager.hpp  PreprocessEngine.hpp  SpatialIndexManager.hpp  TileManager.hpp  Types.hpp  Utils.hpp
scripts/: batch_process.py  compare_dem_results.py  release_product.py  write_geotiff.py
src/: CRSManager.cpp  Config.cpp  DEMEngine.cpp  GroundFilterEngine.cpp  InputManager.cpp  Logger.cpp  MainController.cpp  OutputManager.cpp  PreprocessEngine.cpp  SpatialIndexManager.cpp  TileManager.cpp  Utils.cpp  main.cpp
tests/: test_compare_dem_results.py  test_config.cpp  test_pipeline.cpp
